--- a/styles/colors.module.scss
+++ b/styles/colors.module.scss
@@ -2,6 +2,8 @@ $primary-color:#7B61FF;
 $neutral-color: #FFFFFF;
 $focused-color: #007BAD;
 $secondary-color:#C2C8D0;
+$input-color:#858585;
+
 
 
 
