--- a/components/FirstForm/FirstForm.module.scss
+++ b/components/FirstForm/FirstForm.module.scss
@@ -30,7 +30,9 @@
 
         input {
             padding: 16px 196px 16px 16px;
-            border:1px solid $secondary-color;
+            border: 1px solid $secondary-color;
+            color: $input-color;
+            border-radius: 4px;
         }
 
         margin-top: 35px;
@@ -61,7 +63,8 @@
             font-weight: 400;
             font-size: 16px;
             line-height: 24px;
-            border:1px solid $secondary-color;
+            border: 1px solid $secondary-color;
+            border-radius: 4px;
 
 
         }
@@ -94,7 +97,8 @@
             font-weight: 400;
             font-size: 16px;
             line-height: 24px;
-            border: 1px solid $primary-color;
+            border: 2px solid $primary-color;
+            border-radius: 4px;
 
         }
 
@@ -105,14 +109,16 @@
 
     .four {
         .rtl {
-            background: url("/icons/eye.svg")no-repeat right ;
+            background: url("/icons/eye.svg")no-repeat right;
+            background-position-x: 20rem;
             background-size: 20px;
-          right: 10px;
-            
-            
+            right: 10px;
+
+
 
 
         }
+
         ::placeholder {
             font-family: 'Roboto';
             font-style: normal;
@@ -123,7 +129,9 @@
 
         input {
             padding: 16px 192px 16px 16px;
-            border:1px solid $secondary-color;
+            border: 1px solid $secondary-color;
+            color: $input-color;
+            border-radius: 4px;
 
         }
 
@@ -143,27 +151,30 @@
             font-weight: 400;
             font-size: 12px;
             line-height: 16px;
-            
+            background: $neutral-color;
+
         }
 
         input {
-             padding: 16px 172px 16px 16px;
+            padding: 16px 172px 16px 16px;
             font-family: 'Roboto';
             font-style: normal;
             font-weight: 400;
             font-size: 16px;
             line-height: 24px;
-            border:1px solid $secondary-color;
-            
+            border: 1px solid $secondary-color;
+            border-radius: 4px;
+
         }
+
         margin-left: 66px;
 
         .rtl1 {
             background: url("/icons/eye.svg")no-repeat right;
-        
+
             background-size: 20px;
-            right: 10px;
-            
+            background-position-x: 20rem;
+
         }
     }
 
@@ -185,7 +196,7 @@
         }
 
         input {
-            
+
             border-color: $primary-color;
             padding: 16px 172px 16px 16px;
             font-family: 'Roboto';
@@ -193,17 +204,69 @@
             font-weight: 400;
             font-size: 16px;
             line-height: 24px;
-            border: 1px solid $primary-color;
+            border: 2px solid $primary-color;
+            color: $input-color;
+            border-radius: 4px;
 
         }
 
         .rtl2 {
             background: url("/icons/eye.svg")no-repeat right;
             background-size: 20px;
-            right: 10px;
+            background-position-x: 20rem;
         }
 
         margin-left: 66px;
 
     }
+
+
+    .seven {
+        display: flex;
+        flex-direction: row;
+
+        .subdomaintwo {
+
+            color: $focused-color;
+
+            // text-align: right;
+            width: 27px;
+            height: 10px;
+            border: none;
+            border-left: 0px;
+            margin: 16px 0 0 -60px;
+            background: white;
+            font-family: 'Roboto';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 24px;
+        }
+
+        .subdomain {
+
+            border: 1px solid gray;
+            border-right: 0px;
+            outline: none;
+            padding: 16px 196px 16px 16px;
+            border: 1px solid $secondary-color;
+            color: $input-color;
+            border-radius: 4px;
+        }
+
+
+        ::placeholder {
+            font-family: 'Roboto';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 24px;
+        }
+
+        margin-left: 65px;
+
+    }
+
+
+
 }
