--- a/styles/typography.module.scss
+++ b/styles/typography.module.scss
@@ -1,26 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-@mixin base-font {
+@mixin h1() {
     margin: 0;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     line-height: 56px;
+    font-size: 48px;
   }
   
 
-  h1{
-    @include base-font();
-    font-size: 48px;
-  }
-
-  p{
-    @include base-font();
+  @mixin h2() {
+    margin: 0;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
     font-size: 16px;
   }
 
-
-a{
-    @include base-font();
+  @mixin h3() {
+    margin: 0;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
     font-size: 12px;
-}
+  }
